# agentmux

./: .agentmux.example.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  demo.cast  step.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: adr.md
examples/: pi-workspace.agentmux.toml
scripts/: install.sh  manual-tty-test.sh
src/: cli.rs  config.rs  doctor.rs  lib.rs  main.rs  profiles.rs  tui.rs  workspace.rs
src/cli/: commands.rs  config.rs  daemon.rs  mod.rs  output.rs  reset.rs  workspace.rs
src/daemon/: autostart.rs  metadata.rs  mod.rs  protocol.rs  server.rs  session.rs  state.rs
src/pty/: attach.rs  mod.rs
src/storage/: logs.rs
tests/: cli_tests.rs  config_tests.rs  daemon_tests.rs  integration_test.rs  state_tests.rs
